k8s-cluster-configuration/platform/core/a2w-lucas/configs/dashboard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: a2w-lucas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      nodeSelector:
        kubernetes.io/hostname: kubeden-weu-prd-k3s-system
      containers:
        - name: dashboard
          image: registry.k6nis.dev/a2w/lucas-dashboard:v0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: data
          hostPath:
            path: /data/a2w-sre
            type: DirectoryOrCreate
