k8s-cluster-configuration/platform/core/a2w-lucas/configs/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: a2w-lucas-gateway
  namespace: a2w-lucas
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "lucas.k6nis.dev"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: lucas.k6nis.dev
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: a2w-lucas-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lucas-docs-gateway
  namespace: a2w-lucas
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "docs.a2w.io"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: docs.a2w.io
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: a2w-lucas-docs-tls
      allowedRoutes:
        namespaces:
          from: Same
