k8s-cluster-configuration/platform/core/a2w-lucas/configs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/instance: a2w-lucas
  name: a2w-lucas-ingress
  namespace: a2w-lucas
spec:
  rules:
    - host: lucas.kubeden.io
      http:
        paths:
          - backend:
              service:
                name: dashboard
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - lucas.kubeden.io
      secretName: a2w-lucas-tls
